--- a/css/styles.css
+++ b/css/styles.css
@@ -276,7 +276,7 @@ body {
 
 /* --------------------------------------------------------------------------- large zoom */
 .zoom-large #solar-system {
-  width: 100%; }
+  width: 80%; }
 
 .zoom-large.view-2D .scale-stretched #solar-system {
   font-size: 26%; }
@@ -1278,12 +1278,12 @@ dl.infos {
   opacity: 1;
   width: 100%;
   height: 100%;
-  margin-top: -90%;
+  margin-top: -80%;
   margin-left: 90%;
   padding-left: 100%;
   transform-origin: 100% 100%;
   transform-style: preserve-3d;
-  transform: rotateX(0deg); }
+  transform: rotate(10deg); }
 
 /*dl.infos:before {
   position: absolute;
