--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,11 @@ body {
   background-repeat: no-repeat;
   background-size: cover; }
 
+#controls {
+  margin-top: 150px;
+  padding-right: 60px !important;
+}
+
 #galaxy {
   position: relative;
   width: 100%;
@@ -92,6 +97,18 @@ body {
 
 #mars .pos.pos-2 {
   top: 0 !important;
+}
+
+.nav-link-group {
+  margin-top: 10px;
+  margin-bottom: 25px;
+}
+
+.nav-link-group a {
+  color: #fff;
+  font-size: 15px;
+  text-decoration: none;
+  text-shadow: 1px 1px 2px #000;
 }
 
 #mars .pos.pos-3 {
@@ -678,7 +695,7 @@ body {
   position: absolute;
   left: -44px;
   bottom: 12px;
-  width: 300px;
+  width: 100px;
   color: #FFF;
   font-size: 15px;
   text-shadow: 1px 1px 2px black; }
@@ -771,7 +788,7 @@ body {
   position: absolute;
   left: -60px;
   bottom: 10px;
-  width: 300px;
+  width: 100px;
   color: #FFF;
   font-size: 15px;
   text-shadow: 1px 1px 2px black;
@@ -782,7 +799,7 @@ body {
   position: absolute;
   left: -60px;
   bottom: 10px;
-  width: 300px;
+  width: 100px;
   color: #FFF;
   font-size: 15px;
   text-shadow: 1px 1px 2px black;
@@ -793,7 +810,7 @@ body {
   position: absolute;
   left: -60px;
   bottom: 10px;
-  width: 300px;
+  width: 100px;
   color: #FFF;
   font-size: 15px;
   text-shadow: 1px 1px 2px black;
@@ -826,7 +843,7 @@ body {
   position: absolute;
   left: -60px;
   bottom: 33px;
-  width: 300px;
+  width: 100px;
   color: #FFF;
   font-size: 15px;
   text-shadow: 1px 1px 2px black;
@@ -1428,6 +1445,8 @@ h1 {
   margin-bottom: 1px;
   padding: 6px 10px;
   font-size: 18px; }
+
+
 
 #controls label {
   opacity: .6;
