--- a/css/styles.css
+++ b/css/styles.css
@@ -299,7 +299,7 @@ body {
 
 /* --------------------------------------------------------------------------- large zoom */
 .zoom-large #solar-system {
-  width: 80%; }
+  width: 100%; }
 
 .zoom-large.view-2D .scale-stretched #solar-system {
   font-size: 26%; }
@@ -1387,6 +1387,7 @@ h1 {
   font-weight: 600;
   font-size: 14px;
   text-align: center;
+  text-transform: uppercase;
   color: rgba(255, 255, 255, 0.8); }
 
 #navbar, #controls, #data {
@@ -1395,11 +1396,34 @@ h1 {
 #navbar {
   z-index: 99;
   position: absolute;
-  top: 0;
+  top: 0px;
   left: 0;
   padding: 16px;
   width: 100%;
   height: 48px; }
+
+#navbar h1 {
+  font-size: 30px;
+  margin-top: 14px;
+}
+
+#navbar img {
+  float: right;
+  width: 100px;
+  position: relative;
+  right: 30px;
+  top: 10px;
+}
+
+.informatic-foot {
+  position: absolute;
+  bottom: 15px;
+  right: 20px;
+  font-size: 15px;
+  color: #fff;
+  text-shadow: 1px 1px 2px black;
+  z-index: 99;
+}
 
 #navbar a, #data a, #controls label {
   color: rgba(255, 255, 255, 0.6);
@@ -1416,9 +1440,9 @@ h1 {
 #navbar a {
   position: absolute;
   top: 0;
+  right: 0;
   height: 48px;
-  padding: 16px;
-  font-size: 14px; }
+ }
 
 #toggle-data {
   left: 0; }
@@ -1637,7 +1661,7 @@ body {
 
 #sun {
   background-image: url(../images/center-icon.png);
-  background-size: 280px;
+  background-size: 180px;
   background-position: center;
 }
 #mercury .planet {
@@ -1690,8 +1714,6 @@ body {
   #navbar, #controls, #data {
     background: transparent; }
 
-  #navbar a {
-    display: none; }
 
   h1 {
     font-size: 22px;
